--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,5 +1,5 @@
 {{>layout/header}}
-    <h1>무중단 게시판</h1>
+    <h1>24시간 무중단 게시판</h1>
     <div class="col-md-12">
 <!--        로그인 영역-->
         <div class="row">
